# CS_4800-Capstone

./: .gitignore  README.md  pyproject.toml  requirements.txt  tmpfile
src/pytuichat/: __main__.py  _test_client.py  chat.py  cli-testing.py  cli.py  contact.py  debug.py  dev_entrypoint.py  entrypoint.py  filereader.py  idiot.py  inbox.py  lang.py  message.py  settings.py  socketio.py  spit.py  stupid.py  testing.py  testsuite.py  tui.py  unittest.py
src/pytuichat/langs/: en_us.py
